--- a/public/back/login.html
+++ b/public/back/login.html
@@ -22,13 +22,13 @@
             <div class="form-group">
               <label for="username" class="col-sm-3 control-label">用户名:</label>
               <div class="col-sm-9">
-                <input type="text" autocomplete="off" name="username" class="form-control" id="username" placeholder="请输入用户名">
+                <input type="text" name="username" class="form-control" id="username" placeholder="请输入用户名">
               </div>
             </div>
             <div class="form-group">
               <label for="password" class="col-sm-3 control-label">密　码:</label>
               <div class="col-sm-9">
-                <input type="password" autocomplete="off" name="password" class="form-control" id="password" placeholder="请输入密码">
+                <input type="password" autocomplete="new-password" name="password" class="form-control" id="password" placeholder="请输入密码">
               </div>
             </div>
             <div class="form-group">
