--- a/public/back/product.html
+++ b/public/back/product.html
@@ -33,7 +33,7 @@
           </ul>
         </li>
         <li>
-          <a href="product.html"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a>
+          <a class="current" href="product.html"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a>
         </li>
     </div>
 
@@ -56,14 +56,12 @@
        <!-- 链接导航 路径导航 -->
        <ol class="breadcrumb mt_20">
           <li><a href="#">管理系统</a></li>
-          <li class="active">首页</li>
+          <li class="active">商品管理</li>
        </ol>
 
        <!-- 两个图表, 要求要是有宽高的容器 -->
-       <div class="lt_content">
-         <div class="echart_left pull-left"></div>
-         <div class="echart_right pull-right"></div>
-       </div>
+      
+       
      </div>
   </div>
 
@@ -100,9 +98,6 @@
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
   <script src="./lib/nprogress/nprogress.js"></script>
-  <script src="./lib/echarts/echarts.min.js"></script>
   <script src="./js/common.js"></script>
-  <script src="./js/index.js"></script>
-  <script src="./js/isLogin.js"></script>
 </body>
 </html>
