--- a/public/back/second.html
+++ b/public/back/second.html
@@ -27,9 +27,9 @@
         </li>
         <li>
           <a class="cate" href="#"><i class="glyphicon glyphicon-list"></i><span>分类管理</span></a>
-          <ul class="erji">
-            <li><a href="first.html">一级分类</a></li>
-            <li><a href="second.html">二级分类</a></li>
+          <ul class="erji" style="display: block">
+            <li><a  href="first.html">一级分类</a></li>
+            <li><a class="current" href="second.html">二级分类</a></li>
           </ul>
         </li>
         <li>
@@ -56,14 +56,12 @@
        <!-- 链接导航 路径导航 -->
        <ol class="breadcrumb mt_20">
           <li><a href="#">管理系统</a></li>
-          <li class="active">首页</li>
+          <li class="active">分类管理</li>
+          <li class="active">二级分类</li>
        </ol>
 
        <!-- 两个图表, 要求要是有宽高的容器 -->
-       <div class="lt_content">
-         <div class="echart_left pull-left"></div>
-         <div class="echart_right pull-right"></div>
-       </div>
+       
      </div>
   </div>
 
@@ -100,9 +98,6 @@
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
   <script src="./lib/nprogress/nprogress.js"></script>
-  <script src="./lib/echarts/echarts.min.js"></script>
   <script src="./js/common.js"></script>
-  <script src="./js/index.js"></script>
-  <script src="./js/isLogin.js"></script>
 </body>
 </html>
