--- a/public/back/user.html
+++ b/public/back/user.html
@@ -23,7 +23,7 @@
     <div class="nav">
       <ul>
         <li>
-          <a  href="user.html"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a>
+          <a class="current" href="user.html"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a>
         </li>
         <li>
           <a class="cate" href="#"><i class="glyphicon glyphicon-list"></i><span>分类管理</span></a>
@@ -56,14 +56,30 @@
        <!-- 链接导航 路径导航 -->
        <ol class="breadcrumb mt_20">
           <li><a href="#">管理系统</a></li>
-          <li class="active">首页</li>
+          <li class="active">用户管理</li>
        </ol>
 
        <!-- 两个图表, 要求要是有宽高的容器 -->
-       <div class="lt_content">
-         <div class="echart_left pull-left"></div>
-         <div class="echart_right pull-right"></div>
-       </div>
+       <table class="table table-bordered table-hover">
+          <thead>
+            <tr>
+              <th>序号</th>
+              <th>用户名</th>
+              <th>手机号</th>
+              <th>状态</th>
+              <th>操作</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>itcast</td>
+              <td>159565482313</td>
+              <td>正常</td>
+              <td><button class="btn btn-danger">禁用</button></td>
+            </tr>
+          </tbody>
+        </table>
      </div>
   </div>
 
@@ -100,9 +116,6 @@
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
   <script src="./lib/nprogress/nprogress.js"></script>
-  <script src="./lib/echarts/echarts.min.js"></script>
   <script src="./js/common.js"></script>
-  <script src="./js/index.js"></script>
-  <script src="./js/isLogin.js"></script>
 </body>
 </html>
