--- a/public/back/first.html
+++ b/public/back/first.html
@@ -60,8 +60,23 @@
           <li class="active">一级分类</li>
        </ol>
 
-       <!-- 两个图表, 要求要是有宽高的容器 -->
+       <!-- 添加分类 -->
+       <button class="btn btn-default" id="addBtn">添加分类</button>
        
+       <!-- table -->
+       <table class="table table-bordered table-hover mt_20">
+         <thead>
+           <tr>
+             <th width="20%">序号</th>
+             <th width="80%">一级分类名</th>
+           </tr>
+         </thead>
+         <tbody>
+           <!-- 占个坑 -->
+         </tbody>
+       </table>
+
+       <ul id="paginator"></ul>
      </div>
   </div>
 
@@ -92,12 +107,46 @@
         </div>
       </div>
     </div>
-  </div>
+</div>
 
+<!-- 分类模态框 -->
+<div class="modal fade" id="oneModal" tabindex="-1">
+    <!-- 内层模态框 -->
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <form id="form">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" ><span >&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">添加分类</h4>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="请输入一级分类" name="categoryName">
+                </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+              <button type="submit" class="btn btn-primary btn-add">添加</button>
+            </div>
+        </form>
+      </div>
+    </div>
+</div>
+   <script type="text/html" id="firsttmp">
+    {{ each rows v i}}
+     <tr>
+        <td width="20%">{{i+1+(page-1)*size}}</td>
+        <td width="80%">{{v.categoryName}}</td>
+     </tr>
+    {{ /each}}
+   </script>
   <script src="./lib/jquery/jquery.min.js"></script>
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
+  <script src="./lib/artTemplate/template-web.js"></script>
+  <script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
   <script src="./lib/nprogress/nprogress.js"></script>
   <script src="./js/common.js"></script>
+  <script src="./js/first.js"></script>
 </body>
 </html>
