--- a/public/back/user.html
+++ b/public/back/user.html
@@ -71,15 +71,14 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>1</td>
-              <td>itcast</td>
-              <td>159565482313</td>
-              <td>正常</td>
-              <td><button class="btn btn-danger">禁用</button></td>
-            </tr>
+            <!-- 占个坑 -->
           </tbody>
         </table>
+
+        <!-- 分页 -->
+        <ul id="paginator">
+
+        </ul>
      </div>
   </div>
 
@@ -110,12 +109,58 @@
         </div>
       </div>
     </div>
-  </div>
+</div>
+<!-- 禁用模态框 -->
+<div class="modal fade" id="stopModal" tabindex="-1">
+    <!-- 内层模态框 -->
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" ><span >&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">温馨提示</h4>
+        </div>
+        <div class="modal-body">
+          <p class="red">
+            <i class="glyphicon glyphicon-info-sign"></i>
+            <span>您确定要要执行此操作吗？</span>
+          </p>
 
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+          <button type="button" class="btn btn-primary btn-sure">确定</button>
+        </div>
+      </div>
+    </div>
+</div>
+
+
+
+
+  <script type="text/html" id="usertmp">
+    {{ each rows v i}}
+        <tr>
+          <td>{{ i+1+(page-1)*size}}</td>
+          <td>{{v.username}}</td>
+          <td>{{v.mobile}}</td>
+          <td>{{v.isDelete===1 ?'正常':'不正常'}}</td>
+          <td data-id="{{v.id}}">
+            {{ if v.isDelete===0 }}
+            <button class="btn btn-success btn-st">启用</button>
+            {{ else}}
+            <button class="btn btn-danger btn-dt">禁用</button>
+            {{ /if }}
+          </td>
+        </tr>
+    {{ /each }}
+  </script>
   <script src="./lib/jquery/jquery.min.js"></script>
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
+  <script src="./lib/artTemplate/template-web.js"></script>
+  <script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
   <script src="./lib/nprogress/nprogress.js"></script>
   <script src="./js/common.js"></script>
+  <script src="./js/user.js"></script>
 </body>
 </html>
